# AIZO_PROJECT_1

./: .gitignore  BoardGame.cpp  BoardGame.h  CMakeLists.txt  README.md  main.cpp  script.bash  script.bat  test.bat
Projekt 1/: BoardGame.cpp  test.bat
Projekt 1/algorithms/: SortingAlgorithms.h
Projekt 1/input/: floatData.txt  inputData.txt  myBoardGames.txt  myChars.txt  myInts.txt
Projekt 1/output/: bad1_heapdrunk_drunk1.txt  bad1_heapdrunk_drunk10.txt  bad1_heapdrunk_drunk1000.txt  bad1_heapdrunk_drunk300.txt  bad1_quick_pivot0.txt  bad1_quick_pivot1.txt  bad1_quick_pivot2.txt  bad1_quick_pivot3.txt  bad1_shell_gap0.txt  bad2_alg0_dist3.txt  bad2_alg0_dist4.txt  bad2_alg1_dist0.txt  bad2_alg1_dist2.txt  bad2_alg1_dist4.txt  bad2_heapdrunk_drunk500_dist2.txt  bad2_heapdrunk_drunk500_dist3.txt  bad2_heapdrunk_drunk500_dist4.txt  bad2_quick_pivot1_dist0.txt  bad2_quick_pivot1_dist1.txt  bad2_quick_pivot1_dist2.txt  bad2_shell_gap1_dist0.txt  bad2_shell_gap1_dist1.txt  bad2_shell_gap1_dist3.txt  bad3_quick_type0.txt  bad3_quick_type1.txt  bad3_quick_type2.txt  bad3_quick_type3.txt
Projekt 1/utils/: BenchmarkMode.cpp  DataGenerator.h  FileTestMode.cpp  Modes.h
Projekt 2/: script.bat
Projekt 2/algorithms/: MST.h  MaxFlow.h  ShortestPath.h
Projekt 2/utils/: BenchmarkMode.cpp  DataGenerator.h  DataHandler.cpp  DataHandler.h  Edge.h  FileTestMode.cpp  GraphStructure.h  Modes.h  Timer.cpp  helpScript.txt
algorithms/: SortingAlgorithms.cpp  SortingAlgorithms.h
input/: myChars.txt
output/: bad1_alg0.txt  bad1_alg1.txt  bad1_heapdrunk_drunk1.txt  bad1_heapdrunk_drunk10.txt  bad1_heapdrunk_drunk100.txt  bad1_heapdrunk_drunk1000.txt  bad1_heapdrunk_drunk20.txt  bad1_heapdrunk_drunk5.txt  bad1_heapdrunk_drunk50.txt  bad1_heapdrunk_drunk500.txt  bad1_shell_gap1.txt  bad2_alg0_dist0.txt  bad2_alg0_dist1.txt  bad2_alg0_dist2.txt  bad2_alg1_dist1.txt  bad2_alg1_dist3.txt  bad2_heapdrunk_drunk500_dist0.txt  bad2_heapdrunk_drunk500_dist1.txt  bad2_quick_pivot1_dist3.txt  bad2_quick_pivot1_dist4.txt  bad2_shell_gap1_dist2.txt  bad2_shell_gap1_dist4.txt  bad3_quick_type0.txt  bad3_quick_type1.txt  bad3_quick_type2.txt  bad3_quick_type3.txt
utils/: BenchmarkMode.cpp  Data.h  DataGenerator.cpp  DataGenerator.h  DataHandler.cpp  DataHandler.h  FileHandler.cpp  FileHandler.h  FileTestMode.cpp  Modes.h  Timer.h  helpScript.txt
